--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,15 @@
 * {
     box-sizing: border-box;
+    font-family: 'Ubuntu', sans-serif;
 }
 
 body {
     margin: 0;
+    background-image: url('../img/bg.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
 }
 
 
@@ -134,7 +140,7 @@ li a:hover {
 
 .modal-header {
     padding: 2px 16px;
-    background-color: #5cb85c;
+    background-color: #30C5F1;
     color: white;
 }
 
@@ -144,7 +150,7 @@ li a:hover {
 
 .modal-footer {
     padding: 2px 16px;
-    background-color: #5cb85c;
+    background-color: #30C5F1;
     color: white;
 }
 
@@ -166,7 +172,7 @@ input[type=text] {
 
 input[type=submit] {
     width: 100%;
-    background-color: #4CAF50;
+    background-color: #30C5F1;
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
@@ -176,7 +182,7 @@ input[type=submit] {
 }
 
 input[type=submit]:hover {
-    background-color: #45a049;
+    background-color: #30C5F1;
 }
 
 
@@ -190,4 +196,81 @@ input[type=submit]:hover {
 
 .three-column img {
     width: 100%;
+}
+
+
+/* Clase de login */
+
+.login-box {
+    width: 380px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    background-color: rgba(0, 0, 0, 0.397);
+    padding: 30px;
+    border-radius: 5px;
+}
+
+.login-box h1 {
+    float: left;
+    font-size: 40px;
+    border-bottom: 6px solid #30C5F1;
+    margin-bottom: 50px;
+    padding: 13px 0;
+}
+
+.login-box p {
+    color: white;
+    font-size: 11px;
+}
+
+.textbox {
+    width: 100%;
+    overflow: hidden;
+    font-size: 20px;
+    padding: 8px 0;
+    margin: 8px 0;
+    border-bottom: 1px solid #30C5F1;
+}
+
+.textbox i {
+    width: 26px;
+    float: left;
+    text-align: center;
+}
+
+.textbox input {
+    border: none;
+    outline: none;
+    background: none;
+    color: white;
+    font-size: 18px;
+    width: 80%;
+    float: left;
+    margin: 0 10px;
+}
+
+.btn {
+    width: 100%;
+    background: none;
+    border: 2px solid #30C5F1;
+    color: white;
+    padding: 5px;
+    font-size: 18px;
+    cursor: pointer;
+    margin: 12px 0;
+}
+
+.mensajeLogin {
+    width: 100%;
+    padding: 3px 10px;
+    border: 1px solid #ff0707;
+    background-color: rgba(218, 0, 0, 0);
+    margin: 8px 0;
+    display: inline-block;
+    color: white;
+    display: none;
+    border-radius: 3px;
 }
