--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,12 @@ li a {
 }
 
 li a:hover {
-    color: gray;
+    color: #30C5F1;
+}
+
+.liAdmin {
+    float: left;
+    width: 25%;
 }
 
 
@@ -266,6 +271,7 @@ input[type=submit]:hover {
     width: 100%;
     max-width: 400px;
     height: auto;
+    max-height: 400px;
     display: block;
     margin: auto;
     border: solid 2px greenyellow;
@@ -275,6 +281,7 @@ input[type=submit]:hover {
     width: 100%;
     max-width: 400px;
     height: auto;
+    max-height: 400px;
     display: block;
     margin: auto;
     border: solid 2px orange;
@@ -285,6 +292,7 @@ input[type=submit]:hover {
     width: 100%;
     max-width: 400px;
     height: auto;
+    max-height: 400px;
     display: block;
     margin: auto;
     border: solid 3px rgb(55, 159, 245);
@@ -386,4 +394,83 @@ input[type=submit]:hover {
     color: white;
     display: none;
     border-radius: 3px;
+}
+
+
+/* Tabla de usuarios */
+
+.blue {
+    color: #185875;
+}
+
+.yellow {
+    color: #FFF842;
+}
+
+.container th h1 {
+    font-weight: bold;
+    font-size: 1em;
+    text-align: left;
+    color: #2d94c4;
+}
+
+.container td {
+    font-weight: normal;
+    font-size: 1em;
+    color: white;
+    -webkit-box-shadow: 0 2px 2px -2px #0E1119;
+    -moz-box-shadow: 0 2px 2px -2px #0E1119;
+    box-shadow: 0 2px 2px -2px #0E1119;
+}
+
+.container {
+    text-align: left;
+    overflow: hidden;
+    width: 80%;
+    margin: 60px auto;
+    display: table;
+    padding: 0 0 8em 0;
+}
+
+.container td,
+.container th {
+    padding-bottom: 2%;
+    padding-top: 2%;
+    padding-left: 2%;
+}
+
+
+/* Background-color of the odd rows */
+
+.container tr:nth-child(odd) {
+    background-color: #323C50;
+}
+
+
+/* Background-color of the even rows */
+
+.container tr:nth-child(even) {
+    background-color: #2C3446;
+}
+
+.container th {
+    background-color: #1F2739;
+}
+
+.container td:first-child {
+    color: #FB667A;
+}
+
+.container tr:hover {
+    background-color: #464A52;
+    -webkit-box-shadow: 0 6px 6px -6px #0E1119;
+    -moz-box-shadow: 0 6px 6px -6px #0E1119;
+    box-shadow: 0 6px 6px -6px #0E1119;
+}
+
+@media (max-width: 800px) {
+    .container td:nth-child(4),
+    .container th:nth-child(4) {
+        display: none;
+    }
 }
